--- a/gb/20/10/15/n12477281.md
+++ b/gb/20/10/15/n12477281.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pjtbkq381/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pjtbkq381/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pjtbkq381/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】黄继光堵枪眼官媒3版本 军方悄否定</h2>
-<a href="https://git.io/JTd0O"><img width="600" src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2bd0i85jg8bcc.cloudfront.net/E2nx9LX3t"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>黄继光堵枪眼事迹出刊三版本！中共造模范英雄，内容件件遭质疑，最后如何自打嘴巴？上甘岭胜美军的战绩被中共拿来吹嘘，而事实又是如何呢？（公有领域）
 </h6>
 <hr>
-	<p>【大纪元2020年10月15日讯】各位看官好，欢迎您再次光临【<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】。</p>
-<p>今天是<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>系列第三集。说说在<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>貌似碰不得的人物——<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E9%BB%84%E7%BB%A7%E5%85%89.md#1">黄继光</a>。很多观众都说，你们做了件好事，把共产党几十年来玩命维护的英雄模范都说翻了个。还有朋友着急点播我们没来得及还原的共产名人。这让我们很欣慰，很感动，汗没白流。在此一并致谢。</p>
-<p>别急，直到2009年9月10日，中宣部等部委还把<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E9%BB%84%E7%BB%A7%E5%85%89.md#1">黄继光</a>评为“100位新中国成立以来感动中国人物”呢。您想，<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>71年百万亿的浩大洗脑工程，不是一下能强拆完的，是吧。但请放心，我们几百集的反洗脑节目也不会停歇，挖坟尚未有穷期！希望大家一块上。</p>
+	<p>【大纪元2020年10月15日讯】各位看官好，欢迎您再次光临【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】。</p>
+<p>今天是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>系列第三集。说说在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>貌似碰不得的人物——<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%BB%84%E7%BB%A7%E5%85%89.md#1">黄继光</a>。很多观众都说，你们做了件好事，把共产党几十年来玩命维护的英雄模范都说翻了个。还有朋友着急点播我们没来得及还原的共产名人。这让我们很欣慰，很感动，汗没白流。在此一并致谢。</p>
+<p>别急，直到2009年9月10日，中宣部等部委还把<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%BB%84%E7%BB%A7%E5%85%89.md#1">黄继光</a>评为“100位新中国成立以来感动中国人物”呢。您想，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>71年百万亿的浩大洗脑工程，不是一下能强拆完的，是吧。但请放心，我们几百集的反洗脑节目也不会停歇，挖坟尚未有穷期！希望大家一块上。</p>
 <p>好，书归正本。黄继光又是一个十几亿中国人熟得不能再熟的名字。鼓吹“革命英雄主义”是中共保党保权的熟练业务。黄继光肉身堵枪眼，还有比这更英勇的吗？所以，人死了快70年，他却还是很赚钱的洗脑工具，就像上集咱们说的王成。</p>
-<p><center><a src=""></a><a href="https://git.io/JTd0O"><img width="600" src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/O31pI3e4nrw" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>黄继光，原名黄继广，四川中江人，共军赴朝鲜第45师135团6连通讯员。1952年10月19日在朝鲜<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E4%B8%8A%E7%94%98%E5%B2%AD.md#1">上甘岭</a>地区597.9高地阵亡，死时21岁。</p>
-<p>黄继光是不是堵枪眼而死，多年来质疑者众多，<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>研究学者穆正新曾在大纪元网站发文，引经据典，分析透撤。故本片借用一些与大家分享。</p>
+<p><center><a src=""></a><a href="https://d2bd0i85jg8bcc.cloudfront.net/E2nx9LX3t"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/O31pI3e4nrw" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>黄继光，原名黄继广，四川中江人，共军赴朝鲜第45师135团6连通讯员。1952年10月19日在朝鲜<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%8A%E7%94%98%E5%B2%AD.md#1">上甘岭</a>地区597.9高地阵亡，死时21岁。</p>
+<p>黄继光是不是堵枪眼而死，多年来质疑者众多，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>研究学者穆正新曾在大纪元网站发文，引经据典，分析透撤。故本片借用一些与大家分享。</p>
 <h2>新华社三个自相矛盾的黄继光版本 人名都写错</h2>
 <p>据他指，党媒新华社先后发过三个自相矛盾的有关黄继光死前的版本。黄死后一个月，1952年11月21日的《人民日报》就刊登了“新华社朝鲜前线20日电”。这是“黄继光堵枪眼”故事的首版。</p>
 <h3>第一版本</h3>
@@ -32,7 +32,7 @@
 <p><strong>冬雷锐评：刚刚用尽了最后的力气扔手雷，现在又像一支离弦的箭。美军的两挺机枪并排放着，并排放着的机枪必须半米以上的间距才可能射击。小个子的黄继光胸膛怎么可能同时抵住两挺机枪呢？</strong></p>
 <p>这二版包装，勉强挺到2000年中共开始纪念韩战50周年前后，黄继光的战友们纷纷出面回忆。窘的是，二版的一些情节又被官方否定，于是三版出炉，又删改了所有二版遭质疑的细节。而且还是被不离不弃的新华网刊登。</p>
 <h3>第三版本</h3>
-<p>三版这么说的，“1952年10月，黄继光所在营与美军为首的‘联合国军’和南朝鲜军激战4昼夜后，于19日夜奉命夺取<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E4%B8%8A%E7%94%98%E5%B2%AD.md#1">上甘岭</a>西侧597.9高地。山顶上敌一个集团火力点，以3挺重机枪、4挺轻机枪的密集火力，死死地控制着制高点，第一、第二个爆破组连续冲上去，两组同志全部壮烈牺牲。”</p>
+<p>三版这么说的，“1952年10月，黄继光所在营与美军为首的‘联合国军’和南朝鲜军激战4昼夜后，于19日夜奉命夺取<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%8A%E7%94%98%E5%B2%AD.md#1">上甘岭</a>西侧597.9高地。山顶上敌一个集团火力点，以3挺重机枪、4挺轻机枪的密集火力，死死地控制着制高点，第一、第二个爆破组连续冲上去，两组同志全部壮烈牺牲。”</p>
 <p>“关键时刻，黄继光挺身而出……他带领2名战士勇敢机智地连续摧毁敌人几个火力点，一名战友不幸牺牲，另一名战友身负重伤，他的左臂也被打穿。他毫无畏惧，忍着伤痛，迅速抵近敌中心火力点，连投几枚手雷，敌机枪顿时停止了射击。当部队趁势发起冲击时，残存地堡内的机枪又突然疯狂扫射，攻击部队再次受阻。这时他多处负伤，弹药用尽。为了战斗的胜利，他顽强地向火力点爬去，靠近地堡射孔时，奋力扑上去，用自己的胸膛，死死地抵住了敌人正在喷射火舌的枪眼，壮烈捐躯。”</p>
 <p><strong>冬雷锐评：对照起来看，1952年“经各方仔细核查后的”新华社第二版实际上已经没有几行字能存活下来。黄继光“胸膛上被射穿了五个洞”，没人提了；黄继光堵住“两挺机枪”也不见了。</strong></p>
 <p>官媒后来还证实，新华社这一版竟把执行爆破任务三战士的名字都写错了！黄继广被写成“黄继光”，肖登良被写成“肖德良”，吴三洋被写成“吴三羊”。“黄继光”已经尽人皆知，中共只得将错就错，黄继广人死了名字也跟着死了。最高党媒把人名写错，这种硬伤都可以将错就错，让人无语，当然也得看写错了谁，不信你把江泽民写成江害民试试，肯定一追到底，然后打成反革命。</p>
@@ -74,49 +74,48 @@
 <p>可以说，图谋帮助朝鲜统一半岛的中共不仅在战争中损兵折将，被迫签订停战协定，而且没有占到丝毫便宜。相反，中共军和朝共军不仅被赶回“三八线”，朝鲜国土面积还比战前少了1,500平方英里，而且失去的是一块富产天然气的地区。</p>
 <p>无疑，中共大内宣对国人吹嘘的上甘岭战役乃至“伟大”的“抗美援朝”战争，堆砌在了无数谎言之上。除了众多无辜的共军官兵冤死异国他乡之外，中国人民又得到了什么呢？</p>
 <p>又一个沉重的故事讲完了，各位看官，谢谢您的耐心观看，咱们下集邱少云再见。</p>
-<p>《<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊 #</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/15/4/22/n4417153.md#1">“黄继光堵枪眼”真假辩</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/15/5/11/n4431675.md#1">女主持问“黄继光是假” 中共少将恼羞成怒</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/9/23/n8331666.md#1">陆教科书王二小故事遭疑：日军愚？共军蠢？</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/9/29/n12438418.md#1">【欺世大观】王进喜如何被利用“感动”中国的</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/4/22/n4417153.md#1">“黄继光堵枪眼”真假辩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/5/11/n4431675.md#1">女主持问“黄继光是假” 中共少将恼羞成怒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/9/23/n8331666.md#1">陆教科书王二小故事遭疑：日军愚？共军蠢？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/29/n12438418.md#1">【欺世大观】王进喜如何被利用“感动”中国的</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a></li><li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12517575.md#1">【大陆新闻解毒】时事小品：中国人民组织起来了</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12517543.md#1">严真点评&#038;外交部大实话：美围猎 习再干15年？</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12518057.md#1">【役情最前线】拜登选情告急 社交媒体股价大跌</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514672.md#1">【新闻看点】备战动员？五中公报泄习心头大患</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/31/n12515225.md#1">【拍案惊奇】美大选“神算”开口 中共甩锅新招</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/2/n12519251.md#1">签名遇妇人暖送1卷大钞 澎恰恰泪崩：我会加油</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12518151.md#1">杨幂踩高跟鞋下楼梯 伸手扶男星扑空超尴尬</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/31/n12516017.md#1">“007”詹姆斯·邦德饰演者肖恩·康纳利去世</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12518017.md#1">生日蛋糕被嫌老派 38岁林依晨高EQ回应</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12517068.md#1">英国富豪拟用空气生产钻石 成本低又环保</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514158.md#1">缺维生素B12易晕眩！经期这样吃 补血抗疲劳</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514662.md#1">干咳不是感冒是秋燥？1穴位立即止咳</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12516971.md#1">印度阿萨姆茶价格创新高 每公斤上千美元</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/15/n12477281.htm">【欺世大观】黄继光堵枪眼官媒3版本 军方悄否定</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/15/n12477281.htm">【欺世大观】黄继光堵枪眼官媒3版本 军方悄否定</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pjtbkq381/djy/blob/master/gb/20/10/15/n12477281.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pjtbkq381/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pjtbkq381/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/15/n12477281.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
