--- a/gb/20/10/3/n12449531.md
+++ b/gb/20/10/3/n12449531.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xdluor3301/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xdluor3301/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xdluor3301/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xdluor3301/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xdluor3301/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xdluor3301/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xdluor3301/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xdluor3301/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】《英雄儿女》主角原型 悲惨一生</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/1896f9f2fc71c7a897ad6209f6bf5527-600x400.jpg" />
 <h6>《英雄儿女》王成原型蒋庆泉英勇奋战高喊：向我开炮！却因当战俘被打成叛徒穷困一生；韩战后共产党又是如何整肃战俘？（公有领域／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年10月03日讯】各位看官好，欢迎新老朋友再次光临。今年是<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>70周年纪念，那场耗时三年，死伤数百万人命的区域热战，被中共70年来为洗脑中国人、自我定性为“抗美援朝”运动，也是它炮制爱党爱国的重要题材。然而，它为何要派重兵援助金日成，就算百万死伤也要对抗美国为首的联合国军，到底正义还是邪恶，很多年轻朋友并不清楚。好，70年后的今天，让我们和大家一起，努力扒下<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>宣教的“金玉”，看看“抗美援朝”光鲜外表下的败絮。</p>
-<p>因为案情复杂而惨烈，我们想为大家做几集的系列，尽量以我们【<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】的独特角度，把<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>这个话题说到位。今天这集节目，以人尽皆知的电影《英雄儿女》开板。</p>
+	<p>【大纪元2020年10月14日讯】各位看官好，欢迎新老朋友再次光临。今年是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>70周年纪念，那场耗时三年，死伤数百万人命的区域热战，被中共70年来为洗脑中国人、自我定性为“抗美援朝”运动，也是它炮制爱党爱国的重要题材。然而，它为何要派重兵援助金日成，就算百万死伤也要对抗美国为首的联合国军，到底正义还是邪恶，很多年轻朋友并不清楚。好，70年后的今天，让我们和大家一起，努力扒下<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>宣教的“金玉”，看看“抗美援朝”光鲜外表下的败絮。</p>
+<p>因为案情复杂而惨烈，我们想为大家做几集的系列，尽量以我们【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】的独特角度，把<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9F%A9%E6%88%98.md#1">韩战</a>这个话题说到位。今天这集节目，以人尽皆知的电影《英雄儿女》开板。</p>
 <h2>韩战《英雄儿女》如何炮制的</h2>
-<p>记得小时候看《英雄儿女》，一到男一号<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E7%8E%8B%E6%88%90.md#1">王成</a>妹妹王芳大唱主题曲《英雄赞歌》的时候，很多人会情不自禁地跟唱，甚至热血沸腾。和现在台上歌星领唱情歌，台下上万歌迷摇着荧光棒动情合唱一样一样的。</p>
+<p>记得小时候看《英雄儿女》，一到男一号<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%88%90.md#1">王成</a>妹妹王芳大唱主题曲《英雄赞歌》的时候，很多人会情不自禁地跟唱，甚至热血沸腾。和现在台上歌星领唱情歌，台下上万歌迷摇着荧光棒动情合唱一样一样的。</p>
 <p>公平地说，音乐旋律和歌词对啥也不懂的孩子杀伤力巨大，不瞒看官您说，歌词到现在大叔我都还记得：“烽烟滚滚唱英雄，四面青山侧耳听……”1964年共军空政歌舞团张映哲的小亮嗓儿也确实感染人，而且歌词设计得也是先给你展示画面、带入、抒够了情、话锋一转，就开始扯了，“人民战士驱虎豹，舍生忘死保和平……”可谁是虎豹，保哪方和平？就是到今天，脑浆洗得红红的人们还是不知道上了中宣部的大当，当时看片跟唱的人都不会发出大问，和现在晕晕乎乎跳广场舞唱红歌的大妈也是一样一样的。</p>
-<p>那么，到底有没有<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E7%8E%8B%E6%88%90.md#1">王成</a>？有没有那句戏词儿：“为了胜利，向我开炮”？别说，还真有，但真人不叫王成，口号也没那么高大亮。</p>
+<p>那么，到底有没有<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%88%90.md#1">王成</a>？有没有那句戏词儿：“为了胜利，向我开炮”？别说，还真有，但真人不叫王成，口号也没那么高大亮。</p>
 <p>先来说说这个故事的背景。上世纪五十年代初，金日成野心爆棚，想独霸朝鲜半岛，悍然出兵南韩，攻势很猛，据说以中共林彪四野给的三个朝鲜族师37000兵力助攻，很快占领了汉城，金日成眼看打败李承晚政府军，占领整个半岛的关键时刻，以美国为首的联合国军9月15日从汉城西面的仁川登陆，十几天就将北韩共军打回了“三八”线以北。</p>
 <p>眼看联合国军长驱直入进抵鸭绿江中朝边界，吓傻了老金，赶紧跪求苏共大哥斯大林和中共二哥毛泽东，狡猾的斯大林号称在度假，不想管这事，就要求老毛发兵救金，最终造成1950年10月19日开始，中共军队135万人陆续大举入朝，对抗联合国军，挽救老金，共军以人海战术打，三年死、伤、病、失踪、被俘近100万，打到1953年7月，老毛一看实在扛不住了，不得不同意坐到谈判桌旁，最终和联合国军达成了停火协议。南北各自回到早年划定的三八线两侧。韩战结束。</p>
-<p>协议签署后，双方开始撤兵，遣返<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E6%88%98%E4%BF%98.md#1">战俘</a>。当时联合国军俘获的中共官兵共21,000多人，自愿遣返者6,670人，另外的14,325人以“毋宁死”的坚决态度拒绝返回共产中国。中共一看，这大大地丢脸啊，就采取威逼和色诱之法，最终有440人回心转意同意返回中共国。</p>
+<p>协议签署后，双方开始撤兵，遣返<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%98%E4%BF%98.md#1">战俘</a>。当时联合国军俘获的中共官兵共21,000多人，自愿遣返者6,670人，另外的14,325人以“毋宁死”的坚决态度拒绝返回共产中国。中共一看，这大大地丢脸啊，就采取威逼和色诱之法，最终有440人回心转意同意返回中共国。</p>
 <p>您可能了解，每个正常国家都很珍惜为国效命的军人，对不幸被俘的士兵那也是竭力营救，特别是美国。但这些为中共出生入死，侥幸活下来的几千人万万没想到的是，等待他们的是生不如死。</p>
-<p>怎么个结果呢，别急，您接着听。第一批自愿遣返的<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E6%88%98%E4%BF%98.md#1">战俘</a>在三八线以北的开城受到了夹道欢迎。开城大家最近都听说了，对，就是金日成孙女金与正下令炸毁开城朝韩工业园区办公大楼的那个开城。战俘们开始心里还暖洋洋的，没想到，再往北进到自己祖国，立马被关进辽宁昌图“志愿军”归国人员管理处（归管处）。从1953年11月开始政治审查。</p>
-<p>过来人都知道，<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>的政审就是整人。整个过程分为四步：动员教育、检查交待、做出结论、安置处理。归管处后来还下发文件称：“共产党员是不能被俘的”。那当然啊，你入党时候发誓要把小命献给党啊，党派你上战场，你怎么敢不为党战死，还让敌人俘虏，居然还敢活着回来！所以，战俘必须交代这个问题，沉痛反省。于是，共军战俘们个个蔫头耷脑，开会检讨，自我赎罪，写出深刻检查，反省投降行为。在党的词典里，被俘等同于投降敌人。</p>
+<p>怎么个结果呢，别急，您接着听。第一批自愿遣返的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%98%E4%BF%98.md#1">战俘</a>在三八线以北的开城受到了夹道欢迎。开城大家最近都听说了，对，就是金日成孙女金与正下令炸毁开城朝韩工业园区办公大楼的那个开城。战俘们开始心里还暖洋洋的，没想到，再往北进到自己祖国，立马被关进辽宁昌图“志愿军”归国人员管理处（归管处）。从1953年11月开始政治审查。</p>
+<p>过来人都知道，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>的政审就是整人。整个过程分为四步：动员教育、检查交待、做出结论、安置处理。归管处后来还下发文件称：“共产党员是不能被俘的”。那当然啊，你入党时候发誓要把小命献给党啊，党派你上战场，你怎么敢不为党战死，还让敌人俘虏，居然还敢活着回来！所以，战俘必须交代这个问题，沉痛反省。于是，共军战俘们个个蔫头耷脑，开会检讨，自我赎罪，写出深刻检查，反省投降行为。在党的词典里，被俘等同于投降敌人。</p>
 <p>说到关键点了，在这批战俘中，有一个叫蒋庆泉的军人，他，就是党宣十年后推出的洗脑影片《英雄儿女》的原型之一。为什么说之一，咱一会儿再说。</p>
 <p>《英雄儿女》的文字版本叫《团圆》。1952年韩战期间，作家巴金参加全国文联组织的赴朝创作活动。1961年，巴金发表了反映韩战的短篇小说《团圆》，故事主人公就叫王成。当时受到文化部副部长夏衍的青睐，要求长春电影制片厂拍成电影，1964年《英雄儿女》上市。</p>
 <p>来到2005年2月，中共《解放军报》刊登了“电影《英雄儿女》的幕后珍闻”，算是个政治花絮吧。文中说，夏衍责成长影导演武兆堤和编导毛烽将《团圆》改编成电影的时候，毛编看到巴金小说中写到王成的牺牲时只有一句话，说“只是王成没有能回来，他勇敢地在山头牺牲了。”毛编觉得就这么一句话怎么塑造英雄啊，是吧，真是无从下手，没想到武导竟威胁他说：“你干也得干，不干也得干，上了这‘贼船’就不能下来。”</p>
@@ -49,49 +49,48 @@
 <p>故事讲完了。银幕上王成的形象和王芳的激情歌声，驻守在几代中国人的记忆里，可很多人听都没听说过蒋庆泉这个名字。事实就是这么残酷，“卸磨杀驴”这个成语就是这么扣题。一方面，蒋庆泉等人“向我开炮”的大词被中共拿来包装给其他人洗脑；另一方面，这个党对为自己卖命、用完了的炮灰却冷漠残酷。</p>
 <p>讽刺的是，英雄包装工巴金和他的短篇小说《团圆》也没躲过劫难。文革期间，巴金和《团圆》被批“渲染战争恐怖、有意让英雄死亡，鼓吹和平主义”；而电影《英雄儿女》却被赦免，但字幕里“根据巴金小说改编”这句话被删掉了，和现在中宣部、网信办删敏感词一样。然后，《英雄儿女》和主题歌《英雄赞歌》成了家喻户晓的“红色经典”，也是中共国最著名的抗美援朝影片之一。</p>
 <p>如今，王成塑造者巴金已经作古，最早采访蒋庆泉的记者洪炉也刚刚去世。压抑半世，憋屈一生，已界92高龄的蒋老先生，您还好吗？</p>
-<p>《<ahref="https://github.com/xdluor3301/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊 ＃</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/12/8/13/n3658096.md#1">金门战役 回大陆的共军战俘命运</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/14/2/6/n4076343.md#1">《英雄儿女》王成原型 80多岁上街卖鞋垫</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/7/28/n10597641.md#1">美军士兵荣归故里 中国老兵感慨 忆韩战炮火</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/8/20/n10652475.md#1">失散65年 韩朝离散家属首轮会面 场景感人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/8/13/n3658096.md#1">金门战役 回大陆的共军战俘命运</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/2/6/n4076343.md#1">《英雄儿女》王成原型 80多岁上街卖鞋垫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/7/28/n10597641.md#1">美军士兵荣归故里 中国老兵感慨 忆韩战炮火</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/20/n10652475.md#1">失散65年 韩朝离散家属首轮会面 场景感人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/xdluor3301/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/xdluor3301/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/9/26/n12433081.md#1">奇人预言“靖康之难”：天星不照 火龙骑日</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/8/n12462258.md#1">香港一名街头歌手的故事</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/10/n12466587.md#1">一群美军士兵称 在韩战时遭UFO以光线攻击</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/10/n12466299.md#1">女子休克时灵魂出窍 看见医生在抢救自己</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/9/24/n12428110.md#1">“自写履历”有多难？醉入冥府见奇闻</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/14/n12475327.md#1">【重播】蓬佩奥新闻会：中共持续威胁各国</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/14/n12474304.md#1">【西岸观察】巴雷特用一张白纸赢得尊重</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/13/n12472449.md#1">【重播】川普宾州演讲：让美国成为能源大国</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12470527.md#1">【一线采访】青岛瞒疫 新疫情十一前已爆发</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12469972.md#1">看好川普连任 专家：美大选民调有两问题</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/11/n12468712.md#1">【独家】南海上演伤亡演习 美中针锋相对</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12469576.md#1">抗癌成功首晒全家福照 余苑绮灿笑：终于达成</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12471021.md#1">BTS提韩战惹怒五毛 中共战狼发言人罕见灭火</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/11/n12468741.md#1">章子怡携女探班汪峰 意外曝光手上硕大钻戒</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/11/n12468501.md#1">疫情下对赌失败 周星驰将与大陆金主对簿公堂</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12471315.md#1">胡歌蹲下来接受采访 暖心举动获称赞</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12469663.md#1">被主人打毒针并活埋 小狗自己挖开坟墓逃出</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12470563.md#1">70岁仍有20岁身材 日医：简单的减糖餐是火锅</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/13/n12472039.md#1">日男夹不到娃娃怒报警 店员试300次也失败</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/12/n12469863.md#1">前美国防部官员：应租F-35战机给台湾抗共</a></li>
-<li><a href="https://github.com/xdluor3301/djy/blob/master/gb/20/10/13/n12471784.md#1">傻傻分不清？ 法国夫妇买宠物猫 结果是虎崽</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xdluor3301/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xdluor3301/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/3/n12449531.htm">【欺世大观】《英雄儿女》主角原型 悲惨一生</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/3/n12449531.htm">【欺世大观】《英雄儿女》主角原型 悲惨一生</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xdluor3301/djy/blob/master/gb/20/10/3/n12449531.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xdluor3301/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xdluor3301/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xdluor3301/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xdluor3301/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdluor3301/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/3/n12449531.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
